# mnist_arma

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  config.h.in  get_mnist.sh  main.cpp  mnist.cpp  mnist.hpp  neural_net.cpp  neural_net.hpp  png_weight.hpp  util.cpp  util.hpp
docs/: .gitignore  Classes.rst  Doxyfile  Enums.rst  Functions.rst  Makefile  Structs.rst  Typedefs.rst  conf.py  doxygen_index.rst  index.rst  parse_xml.py
